--- a/vlog.html
+++ b/vlog.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Daily Vlog — The Almanack of a Simple Guy</title>
+  <title>Daily Vlog — The Simple Guy</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1 class="site-title">The Almanack of a Simple Guy</h1>
+    <h1 class="site-title">The Simple Guy</h1>
     <nav>
       <a href="index.html">About</a>
       <a href="finance.html">Finance</a>
