--- a/finance.html
+++ b/finance.html
@@ -21,14 +21,67 @@
 
   <main>
     <h2>Finance Notes</h2>
+
+    <!-- Saving -->
     <article class="card">
-      <h3>My Investment Principles</h3>
+      <h3>1. Saving & Emergency Fund</h3>
+      <p>Before investing, build a strong financial foundation. Start by saving at least <b>3–6 months of living expenses</b> in an emergency fund. 
+      Keep this in a safe place like a savings account or liquid mutual fund, not in risky investments.</p>
       <ul>
-        <li>Index funds over stock picking</li>
-        <li>Think long-term</li>
-        <li>Emergency fund first</li>
+        <li>Track your monthly expenses → use a simple notebook or apps like <a href="https://www.moneycontrol.com/" target="_blank">Moneycontrol</a>.</li>
+        <li>Save before you spend → follow the <b>50-30-20 rule</b> (Needs 50%, Wants 30%, Savings 20%).</li>
+      </ul>
+      <img src="https://www.investopedia.com/thmb/rFncVdaYhXMWJY03NDlTyW0n0Ms=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/50-30-20-thumb-02-0b9c7a6da1b242f3a19d1f0a1e3d9d9e.png" alt="50 30 20 Rule" width="400">
+    </article>
+
+    <!-- Budgeting -->
+    <article class="card">
+      <h3>2. Budgeting</h3>
+      <p>A budget is simply a plan for your money. Warren Buffett says, 
+      <i>"Do not save what is left after spending, but spend what is left after saving."</i></p>
+      <ul>
+        <li>Note down monthly income and expenses.</li>
+        <li>Avoid lifestyle inflation (don’t upgrade everything when salary increases).</li>
+        <li>Use tools: <a href="https://zerodha.com/varsity/" target="_blank">Zerodha Varsity</a> or <a href="https://www.goodbudget.com/" target="_blank">GoodBudget</a>.</li>
       </ul>
     </article>
+
+    <!-- Investing -->
+    <article class="card">
+      <h3>3. Basics of Investing</h3>
+      <p>Once savings and budget are set, move to investments. Charlie Munger reminds us, <i>"The big money is not in the buying and selling, but in the waiting."</i></p>
+      <ul>
+        <li><b>Stocks:</b> Ownership in companies. High return, high risk.</li>
+        <li><b>Mutual Funds:</b> Professionals manage your money. Safer than individual stock picking.</li>
+        <li><b>Index Funds/ETFs:</b> Low-cost, passive funds that track the market (e.g., Nifty 50).</li>
+        <li>Always invest with a <b>long-term mindset (5–10+ years)</b>.</li>
+      </ul>
+      <p><a href="https://www.investopedia.com/terms/i/indexfund.asp" target="_blank">Learn more about Index Funds</a></p>
+    </article>
+
+    <!-- Insurance -->
+    <article class="card">
+      <h3>4. Insurance & Protection</h3>
+      <p>Insurance protects you from financial disasters. Nikhil Kamath (Zerodha co-founder) often stresses on managing risk before chasing returns.</p>
+      <ul>
+        <li><b>Health Insurance:</b> Essential to protect from hospital bills.</li>
+        <li><b>Term Life Insurance:</b> If you have dependents, get pure term life cover (not expensive plans with investment).</li>
+        <li>Avoid mixing insurance with investment products (like ULIPs).</li>
+      </ul>
+    </article>
+
+    <!-- Personal Finance Learning -->
+    <article class="card">
+      <h3>5. Continue Learning</h3>
+      <p>Finance is a lifelong skill. Keep learning a little every day. Here are some trusted resources:</p>
+      <ul>
+        <li><a href="https://zerodha.com/varsity/" target="_blank">Zerodha Varsity (Free courses)</a></li>
+        <li><a href="https://www.youtube.com/@PranjalKamra" target="_blank">Pranjal Kamra YouTube</a></li>
+        <li>Books: <i>The Intelligent Investor</i> by Benjamin Graham, <i>Rich Dad Poor Dad</i> by Robert Kiyosaki.</li>
+      </ul>
+      <img src="https://m.media-amazon.com/images/I/91+t0Di07FL.jpg" alt="Intelligent Investor Book" width="200">
+    </article>
+
   </main>
 </body>
 </html>
