--- a/books.html
+++ b/books.html
@@ -81,7 +81,7 @@
     </div>
 
     <div class="book-card">
-      <img src="https://upload.wikimedia.org/wikipedia/en/1/1c/The_Almanack_of_Naval_Ravikant.jpg" alt="Naval Almanack cover">
+      <img src="https://m.media-amazon.com/images/I/51lUeX6L2BL.jpg" alt="Naval Almanack cover">
       <div class="book-info">
         <h3>The Almanack of Naval Ravikant</h3>
         <h4>Eric Jorgenson</h4>
@@ -90,7 +90,7 @@
     </div>
 
     <div class="book-card">
-      <img src="https://m.media-amazon.com/images/I/81iP2nFfqyL.jpg" alt="Poor Charlie’s Almanack cover">
+      <img src="https://m.media-amazon.com/images/I/61d4xAjbRQL._UF1000,1000_QL80_.jpg" alt="Poor Charlie’s Almanack cover">
       <div class="book-info">
         <h3>Poor Charlie’s Almanack</h3>
         <h4>Charlie Munger</h4>
@@ -99,7 +99,7 @@
     </div>
 
     <div class="book-card">
-      <img src="https://m.media-amazon.com/images/I/81CjWYwz8HL.jpg" alt="Hsin Hsin Ming cover">
+      <img src="https://m.media-amazon.com/images/I/31eXnQuv+IL._UF1000,1000_QL80_.jpg" alt="Hsin Hsin Ming cover">
       <div class="book-info">
         <h3>Hsin Hsin Ming: The Book of Nothing</h3>
         <h4>Osho</h4>
@@ -108,7 +108,7 @@
     </div>
 
     <div class="book-card">
-      <img src="https://m.media-amazon.com/images/I/71gXJZgq8+L.jpg" alt="The Prophet cover">
+      <img src="https://m.media-amazon.com/images/I/91Aea0C6V3S._UF894,1000_QL80_.jpg" alt="The Prophet cover">
       <div class="book-info">
         <h3>The Prophet</h3>
         <h4>Kahlil Gibran</h4>
