--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   <main>
     <section id="about">
       <h2>About me</h2>
-      <p>I share experiments, notes, and lessons from finance, books, workouts, and daily life.</p>
+      <p>I am Vikram Aditya. I am still updating this website.
+        I share experiments, notes, and lessons from finance, books, workouts, and daily life.</p>
 
       <div class="card">
         <h3>Latest from Books</h3>
