--- a/workout.html
+++ b/workout.html
@@ -21,14 +21,92 @@
 
   <main>
     <h2>Workout</h2>
-    <article id="routine" class="card">
-      <h3>My Routine</h3>
-      <p>4 days a week, simple exercises, consistency over intensity.</p>
+
+    <!-- Motivation -->
+    <article class="card">
+      <h3>Consistency Over Everything</h3>
+      <p>
+        Fitness is not about doing crazy heavy workouts once in a while.  
+        It’s about showing up, week after week, and staying consistent.  
+        Even a simple routine done regularly will transform your body 
+        and confidence. The key: <b>Don’t chase perfection, chase progress.</b>
+      </p>
+      <img src="images/consistency.jpg" alt="Consistency in workout" />
     </article>
+
+    <!-- Push Day -->
+    <article id="push" class="card">
+      <h3>Push Day (Chest, Shoulders, Triceps)</h3>
+      <p>
+        Push workouts train the muscles that push weight away from your body. 
+        Here are some beginner-friendly exercises:
+      </p>
+      <ul>
+        <li><b>Push-ups</b> – Classic bodyweight move to build chest and triceps.</li>
+        <li><b>Incline Push-ups</b> – Easier version if you’re starting out.</li>
+        <li><b>Dumbbell Shoulder Press</b> – Strengthens shoulders and triceps.</li>
+        <li><b>Bench Press</b> – Great for chest growth (use light weight first).</li>
+        <li><b>Tricep Dips</b> – Builds arm strength and definition.</li>
+      </ul>
+      <img src="images/push-workout.jpg" alt="Push workout" />
+    </article>
+
+    <!-- Pull Day -->
+    <article id="pull" class="card">
+      <h3>Pull Day (Back, Biceps)</h3>
+      <p>
+        Pull workouts strengthen your back and arms. They improve posture 
+        and give that “V-shape” look.
+      </p>
+      <ul>
+        <li><b>Pull-ups</b> – Best for back and biceps (start with assisted if needed).</li>
+        <li><b>Dumbbell Rows</b> – Builds mid-back thickness.</li>
+        <li><b>Bicep Curls</b> – Simple and effective for arm growth.</li>
+        <li><b>Face Pulls</b> – Great for shoulder health.</li>
+        <li><b>Lat Pulldown</b> – Perfect beginner substitute for pull-ups.</li>
+      </ul>
+      <img src="images/pull-workout.jpg" alt="Pull workout" />
+    </article>
+
+    <!-- Leg Day -->
+    <article id="legs" class="card">
+      <h3>Leg Day (Quads, Hamstrings, Glutes, Calves)</h3>
+      <p>
+        Never skip leg day! Strong legs improve your athletic ability 
+        and overall balance.
+      </p>
+      <ul>
+        <li><b>Bodyweight Squats</b> – Start simple and focus on form.</li>
+        <li><b>Lunges</b> – Build balance and strength.</li>
+        <li><b>Romanian Deadlifts</b> – Strengthens hamstrings and glutes.</li>
+        <li><b>Calf Raises</b> – For strong and defined calves.</li>
+        <li><b>Leg Press</b> – A safe way to add weight for beginners.</li>
+      </ul>
+      <img src="images/legs-workout.jpg" alt="Leg workout" />
+    </article>
+
+    <!-- Diet Basics -->
     <article id="diet-basics" class="card">
-      <h3>Diet Basics</h3>
-      <p>Focus on whole foods, protein intake, and hydration.</p>
+      <h3>Diet for Skinny People (Gaining Weight the Right Way)</h3>
+      <p>
+        If you’re naturally skinny, gaining muscle is about eating <b>more than 
+        you burn</b> while keeping the food quality high. Here are simple rules:
+      </p>
+      <ul>
+        <li><b>Eat in a Calorie Surplus</b> – Track your meals. Add an extra 400–500 calories daily.</li>
+        <li><b>Protein is King</b> – Eggs, chicken, paneer, lentils, whey protein shakes.</li>
+        <li><b>Carbs for Energy</b> – Rice, roti, oats, potatoes, bananas – don’t fear carbs.</li>
+        <li><b>Healthy Fats</b> – Nuts, peanut butter, ghee, avocados keep hormones strong.</li>
+        <li><b>Eat Frequently</b> – 5–6 smaller meals work better than 2 huge meals.</li>
+        <li><b>Train & Rest</b> – Muscles grow when you sleep, not just in the gym.</li>
+      </ul>
+      <p>
+        Bonus tip: <i>Don’t try to bulk up with just junk food. You’ll only gain fat, 
+        not muscle.</i> Stick to whole foods, train hard, and watch yourself grow stronger.
+      </p>
+      <img src="images/diet-gain.jpg" alt="Healthy diet for weight gain" />
     </article>
+
   </main>
 </body>
 </html>
