--- a/workout.html
+++ b/workout.html
@@ -94,7 +94,7 @@
       </p>
       <ul>
         <li><b>Eat in a Calorie Surplus</b> – Track your meals. Add an extra 400–500 calories daily.</li>
-        <li><b>Protein is King</b> – Eggs, chicken, paneer, lentils, whey protein shakes.</li>
+        <li><b>Protein is King</b> – Paneer, lentils, whey protein shakes.</li>
         <li><b>Carbs for Energy</b> – Rice, roti, oats, potatoes, bananas – don’t fear carbs.</li>
         <li><b>Healthy Fats</b> – Nuts, peanut butter, ghee, avocados keep hormones strong.</li>
         <li><b>Eat Frequently</b> – 5–6 smaller meals work better than 2 huge meals.</li>
