--- a/vlog.html
+++ b/vlog.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Daily Vlog — The Simple Guy</title>
+  <title>Blog — The Simple Guy</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -14,16 +14,16 @@
       <a href="finance.html">Finance</a>
       <a href="books.html">Books</a>
       <a href="workout.html">Workout</a>
-      <a href="vlog.html" aria-current="page">Daily Vlog</a>
+      <a href="blog.html" aria-current="page">Blog</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
 
   <main>
-    <h2>Daily Vlog</h2>
+    <h2>Blog</h2>
     <article class="card">
-      <h3>Today’s Update</h3>
-      <p>Worked on the website, went for a jog, read a chapter of Sapiens.</p>
+      <h3> Quote</h3>
+      <p>I know one thing, that I know Nothing - Socrates</p>
     </article>
     <article class="card">
       <h3>Random Thoughts</h3>
