--- a/books.html
+++ b/books.html
@@ -45,7 +45,7 @@
       <a href="finance.html">Finance</a>
       <a href="books.html" aria-current="page">Books</a>
       <a href="workout.html">Workout</a>
-      <a href="vlog.html">Daily Vlog</a>
+      <a href="blog.html">Blog</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
