--- a/finance.html
+++ b/finance.html
@@ -14,7 +14,7 @@
       <a href="finance.html" aria-current="page">Finance</a>
       <a href="books.html">Books</a>
       <a href="workout.html">Workout</a>
-      <a href="vlog.html">Daily Vlog</a>
+      <a href="blog.html">Blog</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
