--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
       <a href="finance.html">Finance</a>
       <a href="books.html">Books</a>
       <a href="workout.html">Workout</a>
-      <a href="vlog.html">Daily Vlog</a>
+      <a href="blog.html">Blog</a>
       <a href="contact.html" aria-current="page">Contact</a>
     </nav>
   </header>
