--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a href="finance.html">Finance</a>
       <a href="books.html">Books</a>
       <a href="workout.html">Workout</a>
-      <a href="vlog.html">Daily Vlog</a>
+      <a href="blog.html">Blog</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
@@ -46,7 +46,7 @@
       <div class="card">
         <h3>Daily Vlog</h3>
         <p>Tiny updates and thoughts.</p>
-        <p><a href="vlog.html">Read the vlog →</a></p>
+        <p><a href="blog.html">Read the Blog →</a></p>
       </div>
     </section>
   </main>
