--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
 
       <div class="card">
         <h3>Latest from Books</h3>
-        <p>Short previews live here. Full list is on the Books page.</p>
+        <p>Full list is on the Books page.</p>
         <ul>
-          <li><a href="books.html#psychology-of-money">The Psychology of Money — notes</a></li>
           <li><a href="books.html#naval-almanack">The Almanack of Naval Ravikant — highlights</a></li>
         </ul>
         <p><a href="books.html">See all book reviews →</a></p>
@@ -36,15 +35,11 @@
 
       <div class="card">
         <h3>Latest from Workout</h3>
-        <ul>
-          <li><a href="workout.html#routine">My 4-day routine</a></li>
-          <li><a href="workout.html#diet-basics">Diet basics</a></li>
-        </ul>
         <p><a href="workout.html">See all workout notes →</a></p>
       </div>
 
       <div class="card">
-        <h3>Daily Vlog</h3>
+        <h3>Blog</h3>
         <p>Tiny updates and thoughts.</p>
         <p><a href="blog.html">Read the Blog →</a></p>
       </div>
