--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <div class="card">
         <h3>Latest from Workout</h3>
-        <p><a href="workout.html">See all workout notes →</a></p>
+        <p><a href="workout.html">Workout notes →</a></p>
       </div>
 
       <div class="card">
