--- a/index.html
+++ b/index.html
@@ -20,10 +20,26 @@
   </header>
 
   <main>
-    <section id="about">
-      <h2>About me</h2>
-      <p>I am Vikram Aditya. I am still updating this website.</p>
-
+     <section id="about">
+      <h2>About Me</h2>
+      <p>
+        Hello World! 👋 <br><br>
+        I am <strong>Vikram Aditya</strong> (also known as <a href="https://www.linkedin.com/" target="_blank">Aditya Kumar</a>), and sometimes I go by <strong>王阳明 (Wang Yangming)</strong>.  
+      </p>
+      <p>
+        My life is guided by a single core value inspired by the Buddha’s wisdom:  
+        <em>“What we think, we become.”</em>
+      </p>
+      <p>
+        This website is part of my <strong>100-day challenge</strong> — a small experiment where I aim to get <em>1% better every day</em>.  
+        Here, I share my personal experiences, thoughts, and learnings.  
+        If you notice some sections incomplete, that simply means I’m still building and improving.  
+      </p>
+      <p>
+        You can also find me on Instagram at  
+        <a href="https://instagram.com/the.simple.guyyy" target="_blank">@the.simple.guyyy</a>.  
+      </p>
+       
       <div class="card">
         <h3>Latest from Books</h3>
         <p>Full list is on the Books page.</p>
