--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h2>About Me</h2>
       <p>
         Hello World! 👋 <br><br>
-        I am <strong>Vikram Aditya</strong> (also known as <a href="https://www.linkedin.com/" target="_blank">Aditya Kumar</a>), and sometimes I go by <strong>王阳明 (Wang Yangming)</strong>.  
+        I am <strong>Vikram Aditya</strong> (also <a href="https://www.linkedin.com/in/adityakumar2608/" target="_blank">Aditya Kumar</a>)and 王阳明 (Wang Yangming).  
       </p>
       <p>
         My life is guided by a single core value inspired by the Buddha’s wisdom:  
