--- a/workout.html
+++ b/workout.html
@@ -34,22 +34,110 @@
       <img src="images/consistency.jpg" alt="Consistency in workout" />
     </article>
 
-    <!-- Push Day -->
-    <article id="push" class="card">
-      <h3>Push Day (Chest, Shoulders, Triceps)</h3>
-      <p>
-        Push workouts train the muscles that push weight away from your body. 
-        Here are some beginner-friendly exercises:
-      </p>
-      <ul>
-        <li><b>Push-ups</b> – Classic bodyweight move to build chest and triceps.</li>
-        <li><b>Incline Push-ups</b> – Easier version if you’re starting out.</li>
-        <li><b>Dumbbell Shoulder Press</b> – Strengthens shoulders and triceps.</li>
-        <li><b>Bench Press</b> – Great for chest growth (use light weight first).</li>
-        <li><b>Tricep Dips</b> – Builds arm strength and definition.</li>
-      </ul>
-      <img src="images/push-workout.jpg" alt="Push workout" />
-    </article>
+   <!-- Push Day -->
+<article id="push" class="card">
+  <h3>Push Day (Chest, Shoulders, Triceps)</h3>
+
+  <p><b>Purpose:</b> Focus on push muscles — chest, shoulders, triceps — with a mix of compound and isolation moves for strength, size, and quality movement.</p>
+  <p><b>Why a 3-part split?</b> Better recovery, faster progress, and clearer programming.</p>
+  <p><b>Warm-up (non-negotiable):</b> 5–10 min cardio + shoulder/pec activations (band pull-aparts, Y/T raises, 2 light sets of first exercise).</p>
+
+  <h4>Workout Overview (7 Exercises — follow the order)</h4>
+
+  <!-- Exercise 1 -->
+  <details>
+    <summary><b>Incline Dumbbell Press</b> — Upper chest, front delts, triceps</summary>
+    <p><b>How to:</b> Set bench 25–35°. Sit, dumbbells on knees, lie back, brace, press up slightly inward, lower under control to chest level.</p>
+    <p><b>Cues:</b> Chest down, elbows ~45°, drive through palms.</p>
+    <p><b>Common mistakes:</b> Bench too steep, flared elbows, bouncing off chest.</p>
+    <p><b>Sets/Reps:</b> 3–4 × 6–10</p>
+    <p><b>Progression:</b> Add weight/reps, pause at bottom, slower lowering.</p>
+    <img src="images/incline-press1.jpg" alt="Incline press example 1">
+    <img src="images/incline-press2.jpg" alt="Incline press example 2">
+  </details>
+
+  <!-- Exercise 2 -->
+  <details>
+    <summary><b>Flat Dumbbell Fly</b> — Chest isolation</summary>
+    <p><b>How to:</b> Lie flat, arms overhead, slight elbow bend. Open wide until stretch in chest, then squeeze back together.</p>
+    <p><b>Cues:</b> Lead with chest, not elbows.</p>
+    <p><b>Common mistakes:</b> Straight elbows, too heavy weights, shoulder strain.</p>
+    <p><b>Sets/Reps:</b> 3 × 8–15</p>
+    <p><b>Progression:</b> Slower lowering, longer stretch, superset with presses.</p>
+    <img src="images/fly1.jpg" alt="Dumbbell fly example 1">
+    <img src="images/fly2.jpg" alt="Dumbbell fly example 2">
+  </details>
+
+  <!-- Exercise 3 -->
+  <details>
+    <summary><b>Weighted Dips</b> — Chest & triceps</summary>
+    <p><b>How to:</b> Use dip bars. Lean forward for chest, upright for triceps. Lower until arms ~parallel, push back up.</p>
+    <p><b>Cues:</b> Chest forward, scapula stable.</p>
+    <p><b>Mistakes:</b> Too deep, kipping, wrist flare.</p>
+    <p><b>Sets/Reps:</b> 3 × 6–12</p>
+    <p><b>Progression:</b> Add weight, slow lowering.</p>
+    <img src="images/dips1.jpg" alt="Weighted dips example 1">
+    <img src="images/dips2.jpg" alt="Weighted dips example 2">
+  </details>
+
+  <!-- Exercise 4 -->
+  <details>
+    <summary><b>Seated Dumbbell Shoulder Press</b> — Shoulders, triceps</summary>
+    <p><b>How to:</b> Sit upright, press dumbbells overhead without arching lower back.</p>
+    <p><b>Cues:</b> Ribcage down, head forward as weights pass.</p>
+    <p><b>Mistakes:</b> Excessive arch, too wide grip, momentum use.</p>
+    <p><b>Sets/Reps:</b> 3–4 × 6–10</p>
+    <p><b>Progression:</b> Add load, single-arm sets, pause reps.</p>
+    <img src="images/shoulder-press1.jpg" alt="Shoulder press example 1">
+    <img src="images/shoulder-press2.jpg" alt="Shoulder press example 2">
+  </details>
+
+  <!-- Exercise 5 -->
+  <details>
+    <summary><b>Dumbbell Lateral Raises</b> — Lateral delts</summary>
+    <p><b>How to:</b> Raise dumbbells to shoulder height, elbows slightly bent, controlled motion.</p>
+    <p><b>Cues:</b> Lead with elbows, not hands.</p>
+    <p><b>Mistakes:</b> Swinging torso, lifting too high.</p>
+    <p><b>Sets/Reps:</b> 3 × 10–15</p>
+    <p><b>Progression:</b> Tempo control, drop-sets.</p>
+    <img src="images/lateral-raise1.jpg" alt="Lateral raises example 1">
+    <img src="images/lateral-raise2.jpg" alt="Lateral raises example 2">
+  </details>
+
+  <!-- Exercise 6 -->
+  <details>
+    <summary><b>Overhead Triceps Extension</b> — Triceps long head</summary>
+    <p><b>How to:</b> Hold dumbbell overhead, lower behind head, extend fully.</p>
+    <p><b>Cues:</b> Elbow close, full stretch & contraction.</p>
+    <p><b>Mistakes:</b> Elbow flaring, using momentum.</p>
+    <p><b>Sets/Reps:</b> 3 × 8–12</p>
+    <p><b>Progression:</b> Heavier weight, pause at bottom.</p>
+    <img src="images/triceps1.jpg" alt="Triceps extension example 1">
+    <img src="images/triceps2.jpg" alt="Triceps extension example 2">
+  </details>
+
+  <!-- Exercise 7 -->
+  <details>
+    <summary><b>V-Crunches</b> — Core finisher</summary>
+    <p><b>How to:</b> Lie flat, arms + legs extended. Contract abs, lift into “V,” reach hands to toes, lower slow.</p>
+    <p><b>Cues:</b> Lead with chest, compress abs, avoid neck strain.</p>
+    <p><b>Mistakes:</b> Pulling neck, swinging legs.</p>
+    <p><b>Sets/Reps:</b> 3 × 12–20 (or 30–45s)</p>
+    <p><b>Progression:</b> Add plate, slower lowering.</p>
+    <img src="images/vcrunch1.jpg" alt="V-Crunch example 1">
+    <img src="images/vcrunch2.jpg" alt="V-Crunch example 2">
+  </details>
+
+  <h4>Program Notes</h4>
+  <ul>
+    <li>Order: compound → accessory → isolation → core.</li>
+    <li>Progressive overload: track reps/weight weekly.</li>
+    <li>Recovery: 48–72 hrs before repeating push muscles.</li>
+    <li>Joint health: add rotator cuff work (bands, face pulls).</li>
+    <li>Increase load if you hit top reps with perfect form twice in a row.</li>
+  </ul>
+</article>
+
 
     <!-- Pull Day -->
     <article id="pull" class="card">
